[package]
name = "armature"
version = "0.1.0"
authors = ["Maxim <MaximDeloof@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armature-macro = { path = "./macro" }
futures = "0.3"
async-std = "1.9"

